fix(toast): Prevent image overlap on new message toast bar [RM-600053]

--- a/webapp/channels/src/components/toast_wrapper/toast__wrapper.scss
+++ b/webapp/channels/src/components/toast_wrapper/toast__wrapper.scss
@@ -1,6 +1,6 @@
 .toasts-wrapper {
     position: absolute;
-    z-index: 3;
+    z-index: 10;
     display: flex;
     width: calc(100% - 32px);
     align-items: center;
@@ -12,7 +12,7 @@
 
 .toasts-wrapper-thread {
     position: absolute;
-    z-index: 3;
+    z-index: 10;
     width: 100%;
     align-items: center;
     justify-content: center;
